syntax = "proto3";

package blockscout.visualizer.v1;

import "google/api/annotations.proto";

service SolidityVisualizer {
  rpc VisualizeContracts(VisualizeContractsRequest) returns (VisualizeResponse) {
      option (google.api.http) = {
        post: "/v1/solidity:visualizeContracts"
        body: "*"
      };
  }

  rpc VisualizeStorage(VisualizeStorageRequest) returns (VisualizeResponse) {
    option (google.api.http) = {
      post: "/v1/solidity:visualizeStorage"
      body: "*"
    };
  }
}

message VisualizeContractsRequest {
  map<string, string> sources = 1;
}

message VisualizeStorageRequest {
  map<string, string> sources = 1;
  string file_name = 2;
  string contract_name = 3;
}

// The client should decide on what type they are interested in
// and specify it through `$fields=` query argument
message VisualizeResponse {
  bytes png = 1;
  bytes svg = 2;
}